FrontEnd/styles/matrix.scss
// Copyright Dave Verwer, Sven A. Schmidt, and other contributors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// -------------------------------------------------------------------------
// Compatibility matrix styles. Used for both the compatibility matrices on
// the package page, and for the full build compatibility report.
// -------------------------------------------------------------------------

.matrices {
    display: flex;
    flex-direction: column;

    a {
        color: var(--page-text);
    }
}

.matrix {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin: 0;
    padding: 20px 0;
    list-style: none;

    .version {
        display: flex;
        flex-direction: column;
        gap: 5px;

        .label {
            display: flex;
            gap: 0.5ch;

            span {
                overflow: hidden;
                flex-basis: 0;
                flex-grow: 1;
                max-width: fit-content;
                white-space: nowrap;
                text-overflow: ellipsis;
            }

            .separator {
                font-size: 14px;
                font-weight: 600;
                color: var(--separator-text);
            }
        }

        .results {
            display: grid;
            grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
            gap: 5px;

            .result {
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
                min-height: 30px;
                font-size: 14px;
                font-weight: 600;

                &.pending,
                &.unknown {
                    color: var(--grid-default-text);
                    background-color: var(--grid-default-background);
                }

                &.compatible {
                    color: var(--grid-compatible-text);
                    background-color: var(--grid-compatible-background);
                }

                &.incompatible {
                    color: var(--grid-incompatible-text);
                    background-color: var(--grid-incompatible-background);
                }

                small {
                    font-size: 9px;
                }
            }
        }
    }
}

